package app.entities;

public enum MaterialType {

    TRYKIMP_TRAE,
    UBH_TRAE,
    PLASTIK,
    METAL,
    UNKNOWN;
}
