package app.entities;

import java.util.List;

public class ShedCalculationStrategy implements CalculationStrategy{

    @Override
    public List<PlacedMaterial> calculateStructure(Structure structure) {
        return List.of();
    }
}
